fixed project cards titles not being aligned

--- a/src/components/ProjectsSection/styles.module.css
+++ b/src/components/ProjectsSection/styles.module.css
@@ -106,6 +106,7 @@
     display: flex;
     justify-content: end;
     align-items: center;
+    min-height: 1rem;
     gap: 2rem;
 }
 
